--- a/supplier/src/main/res/navigation/supplier_nav_graph.xml
+++ b/supplier/src/main/res/navigation/supplier_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/productListFragment"
-        android:name="br.com.example.supplier.view.fragment.ProductListFragment"
+        android:name="br.com.example.supplier.view.fragment.product.ProductListFragment"
         android:label="ProductListFragment" >
         <action
             android:id="@+id/action_productListFragment_to_selectedProductFragment"
