--- a/supplier/src/main/res/navigation/supplier_nav_graph.xml
+++ b/supplier/src/main/res/navigation/supplier_nav_graph.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/productListFragment">
 
     <fragment
         android:id="@+id/productListFragment"
-        android:name="br.com.example.supplier.view.fragment.product.ProductListFragment"
+        android:name="br.com.example.supplier.view.fragment.productlist.ProductListFragment"
         android:label="ProductListFragment" >
         <action
             android:id="@+id/action_productListFragment_to_selectedProductFragment"
@@ -18,10 +17,15 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@+id/productListFragment"
-            app:popUpToInclusive="false" />
+            app:popUpToInclusive="false" >
+            <argument
+                android:name="product"
+                app:argType="br.com.example.core.model.Product"
+                app:nullable="false"/>
+        </action>
     </fragment>
     <fragment
         android:id="@+id/selectedProductFragment"
-        android:name="br.com.example.supplier.view.fragment.SelectedProductFragment"
+        android:name="br.com.example.supplier.view.fragment.selectedproduct.SelectedProductFragment"
         android:label="SelectedProductFragment" />
 </navigation>
