feat(product): product list feature

--- a/supplier/src/main/res/layout/item_product_content.xml
+++ b/supplier/src/main/res/layout/item_product_content.xml
@@ -1,33 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tvProductName"
+        android:id="@+id/tvContentName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvProductDescription"
+        android:id="@+id/tvContentPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        app:layout_constraintLeft_toLeftOf="@id/tvProductName"
-        app:layout_constraintTop_toBottomOf="@id/tvProductName" />
+        app:layout_constraintBottom_toBottomOf="@+id/tvContentName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvContentName" />
 
     <TextView
-        android:id="@+id/tvPrice"
+        android:id="@+id/tvContentDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/tvContentName"
+        app:layout_constraintTop_toBottomOf="@+id/tvContentName" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
