feature(navigation): change navigation

--- a/app/src/main/res/layout/fragment_selected_product.xml
+++ b/app/src/main/res/layout/fragment_selected_product.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/ic_arrow_back_black_24dp"
+            android:background="?attr/actionModeCloseDrawable"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
