--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.SupplierActivity">
+    tools:context=".view.MainActivity">
 
     <fragment
         android:id="@+id/supplierNavHostFragment"
@@ -13,6 +13,5 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:navGraph="@navigation/supplier_nav_graph" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
