--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -21,7 +21,7 @@
             app:popUpToInclusive="false" >
             <argument
                 android:name="product"
-                app:argType="br.com.example.core.model.Product"
+                app:argType="br.com.example.domain.entity.Product"
                 app:nullable="false"/>
         </action>
     </fragment>
@@ -43,7 +43,7 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@+id/supplierFragment"
-            app:popUpToInclusive="false" >>
+            app:popUpToInclusive="false" >
         </action>
     </fragment>
 </navigation>
